docs: add tags in controllers to generate api doc. update readme
